add support for upload_via_url and bump version to 0.3.2
