# generated/imgwire_generated/models/__init__.py
@@ -43,5 +43,6 @@ from generated.imgwire_generated.models.supported_mime_type import SupportedMime
 from generated.imgwire_generated.models.transfer_bytes_dataset_point_schema import TransferBytesDatasetPointSchema
 from generated.imgwire_generated.models.transformations_dataset_point_schema import TransformationsDatasetPointSchema
 from generated.imgwire_generated.models.upload_token_create_response_schema import UploadTokenCreateResponseSchema
+from generated.imgwire_generated.models.upload_via_url_create_schema import UploadViaUrlCreateSchema
 from generated.imgwire_generated.models.uploads_dataset_point_schema import UploadsDatasetPointSchema
 from generated.imgwire_generated.models.validation_error import ValidationError
