# generated/imgwire_generated/models/upload_via_url_create_schema.py
@@ -1,0 +1,127 @@
+# coding: utf-8
+
+"""
+    imgwire.dev Backend API development
+
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+    The version of the OpenAPI document: 0.1.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+from pydantic import BaseModel, ConfigDict, Field
+from typing import Any, ClassVar, Dict, List, Optional
+from typing_extensions import Annotated
+from generated.imgwire_generated.models.custom_metadata_value import CustomMetadataValue
+from generated.imgwire_generated.models.supported_mime_type import SupportedMimeType
+from typing import Optional, Set
+from typing_extensions import Self
+
+class UploadViaUrlCreateSchema(BaseModel):
+    """
+    UploadViaUrlCreateSchema
+    """ # noqa: E501
+    custom_metadata: Optional[Dict[str, CustomMetadataValue]] = None
+    file_name: Optional[Annotated[str, Field(min_length=1, strict=True)]] = None
+    idempotency_key: Optional[Annotated[str, Field(min_length=1, strict=True, max_length=255)]] = None
+    mime_type: Optional[SupportedMimeType] = None
+    purpose: Optional[Annotated[str, Field(min_length=1, strict=True, max_length=255)]] = None
+    url: Annotated[str, Field(min_length=1, strict=True)]
+    __properties: ClassVar[List[str]] = ["custom_metadata", "file_name", "idempotency_key", "mime_type", "purpose", "url"]
+
+    model_config = ConfigDict(
+        populate_by_name=True,
+        validate_assignment=True,
+        protected_namespaces=(),
+    )
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Optional[Self]:
+        """Create an instance of UploadViaUrlCreateSchema from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        excluded_fields: Set[str] = set([
+        ])
+
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude=excluded_fields,
+            exclude_none=True,
+        )
+        # override the default output from pydantic by calling `to_dict()` of each value in custom_metadata (dict)
+        _field_dict = {}
+        if self.custom_metadata:
+            for _key_custom_metadata in self.custom_metadata:
+                if self.custom_metadata[_key_custom_metadata]:
+                    _field_dict[_key_custom_metadata] = self.custom_metadata[_key_custom_metadata].to_dict()
+            _dict['custom_metadata'] = _field_dict
+        # set to None if file_name (nullable) is None
+        # and model_fields_set contains the field
+        if self.file_name is None and "file_name" in self.model_fields_set:
+            _dict['file_name'] = None
+
+        # set to None if idempotency_key (nullable) is None
+        # and model_fields_set contains the field
+        if self.idempotency_key is None and "idempotency_key" in self.model_fields_set:
+            _dict['idempotency_key'] = None
+
+        # set to None if purpose (nullable) is None
+        # and model_fields_set contains the field
+        if self.purpose is None and "purpose" in self.model_fields_set:
+            _dict['purpose'] = None
+
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
+        """Create an instance of UploadViaUrlCreateSchema from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "custom_metadata": dict(
+                (_k, CustomMetadataValue.from_dict(_v))
+                for _k, _v in obj["custom_metadata"].items()
+            )
+            if obj.get("custom_metadata") is not None
+            else None,
+            "file_name": obj.get("file_name"),
+            "idempotency_key": obj.get("idempotency_key"),
+            "mime_type": obj.get("mime_type"),
+            "purpose": obj.get("purpose"),
+            "url": obj.get("url")
+        })
+        return _obj
+
+
